Migrate to PostgreSQL for persistent data storage on Render

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 
 # Get this from https://api-sports.io/
 FOOTBALL_API_KEY=your_football_api_key_here
+
+# PostgreSQL Database URL (automatically provided by Render)
+# For local development, leave this empty to use SQLite
+DATABASE_URL=
