--- a/bot.service
+++ b/bot.service
@@ -4,10 +4,10 @@ After=network.target
 
 [Service]
 Type=simple
-User=ubuntu
-WorkingDirectory=/home/ubuntu/last_man_standing_bot
-Environment=PATH=/home/ubuntu/last_man_standing_bot/.venv/bin
-ExecStart=/home/ubuntu/last_man_standing_bot/.venv/bin/python run_bot.py
+User=raspberrypi
+WorkingDirectory=/home/raspberrypi/last_man_standing_bot
+Environment=PATH=/home/raspberrypi/last_man_standing_bot/.venv/bin
+ExecStart=/home/raspberrypi/last_man_standing_bot/.venv/bin/python run_bot.py
 Restart=always
 RestartSec=10
 
